CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(tolua++)

INCLUDE_DIRECTORIES(
	/usr/include/
)

set(MODULE_DIR ${CMAKE_SOURCE_DIR})

SET (${PROJECT_NAME}_SOURCE_FILES
	${MODULE_DIR}/tolua_event.c
	${MODULE_DIR}/tolua_to.c
	${MODULE_DIR}/tolua_is.c
	${MODULE_DIR}/tolua_push.c
	${MODULE_DIR}/tolua_map.c
)

LIST (APPEND SRCS ${${PROJECT_NAME}_SOURCE_FILES})

INCLUDE_DIRECTORIES(
	${MODULE_DIR}
) 

add_library(${PROJECT_NAME} STATIC ${SRCS})

SET(CMAKE_C_FLAGS "-fPIC ${OSP_DEBUG_FLAGS} ${OSP_OPT_FLAGS} ${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} ${OSP_COMPILER_FLAGS}")
SET(CMAKE_CXX_FLAGS "-fPIC ${OSP_DEBUG_FLAGS} ${OSP_OPT_FLAGS} ${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS} ${OSP_COMPILER_FLAGS}")

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/tolua++.h DESTINATION include/)

